# can-i-run-ai

./: README.md  main.py  pyproject.toml
data/specs/: cpu.json  gpu.json  model.json
deep-reearch-report/: canirunai SDK 설계 문서.htm  deep-research-report.md
docs/: check-verdict-random-sampling-2026-03-19-00-05-08.md  cli.md  configuration.md  qa-check-report.md  scoring.md  spec-collection.md  vibe-coding-improvements.md
docs/implementation/: cli.md  configuration.md  scoring.md  spec-collection.md
docs/qa/: check-verdict-random-sampling-2026-03-18-23-58-29.md  check-verdict-random-sampling-2026-03-19-00-17-03.md
src/canirunai/: __init__.py  gpu_compute.py  sdk.py
src/canirunai/cli/: main.py
src/canirunai/collectors/: __init__.py  base.py  cpu_wikipedia.py  gpu_wikipedia.py  html_tables.py  huggingface_client.py  model_huggingface.py  seed_catalog.py  wikipedia_client.py  wikipedia_live_parser.py
src/canirunai/config/: __init__.py  default_config.toml  loader.py
src/canirunai/loaders/: __init__.py  cpu_loader.py  gpu_loader.py  model_loader.py
src/canirunai/parsers/: __init__.py  normalization.py  openai_structured_parser.py
src/canirunai/schemas/: __init__.py  base.py  cpu.py  gpu.py  model.py  score.py
src/canirunai/scoring/: engine.py  llm_estimator.py  verdict.py
src/canirunai/store/: __init__.py  json_store.py  raw_cache.py
src/canirunai/ui/: __init__.py  terminal_printer.py
tests/: test_cli.py  test_clients.py  test_html_tables.py  test_live_collectors.py  test_scoring.py  test_sdk.py  test_store.py  test_verdict.py
(+190 files in other folders)
